[metadata]
name = dill
author = Mike McKerns
maintainer = Mike McKerns
license = BSD-3-Clause
license_file = LICENSE
description = serialize all of python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/dill
homepage = https://github.com/uqfoundation/dill
download_url = https://github.com/uqfoundation/dill
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.5
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Software Development
platforms = Linux, Windows, Mac

[options]
packages = dill, dill.tools
zip_safe = False
python_requires = >=2.5, !=3.0.*
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[options.extras_require]
readline = pyreadline>=1.7.1
graph = objgraph>=1.7.2

[options.entry_points]
console_scripts =
	undill = dill.tools.undill:undill
	get_objgraph = dill.tools.get_objgraph:get_objgraph
